--- a/jobs/Jenkinsfile
+++ b/jobs/Jenkinsfile
@@ -4,9 +4,9 @@ def jsonParse(def json) {
     new groovy.json.JsonSlurperClassic().parseText(json)
 }
 pipeline {
-  agent { 
-      label 'master' 
-    }
+  agent {
+    label 'principal'
+  }
   environment {
     appName = "variable" 
   }
@@ -16,7 +16,7 @@ pipeline {
      
       steps {
           script {			
-           sh "echo 'hola mundo'"
+           bat "echo 'hola mundo'"
         }
       }
     }
@@ -24,16 +24,15 @@ pipeline {
   post {
       always {          
           deleteDir()
-           sh "echo 'fase always'"
+           bat "echo 'fase always'"
       }
       success {
-            sh "echo 'fase success'"
+            bat "echo 'fase success'"
         }
 
       failure {
-            sh "echo 'fase failure'"
+            bat "echo 'fase failure'"
       }
       
   }
 }  
-
