--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-accessBastion/
-build_java/
-build_node/
-instalaciones/
-job_secret_text/
-jobs_bd_access/
-otros/
+accessBastion
+build_java
+build_node
+instalaciones
+job_secret_text
+jobs_bd_access
+otros
